# TagRss

./: .gitignore  Cargo.toml  folders.yaml  folders.yml  rules.yaml  tagrss.db
configs/: feeds.opml
src/: config.rs  db.rs  feed.rs  folder.rs  lib.rs  logger.rs  main.rs  models.rs  tag.rs
tests/: config_test.rs  folder_test.rs  models_test.rs
