[package]
name = "TagRss"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
feed-rs = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
regex = { version = "1.11.1", features = ["pattern"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
