[package]
name = "tagrss"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
feed-rs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
